--- a/okay-common/okay-common-bom/pom.xml
+++ b/okay-common/okay-common-bom/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>okay-common</artifactId>
-        <groupId>org.okay4cloud</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>okay-common-bom</artifactId>
+    <groupId>org.okay4cloud</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modelVersion>4.0.0</modelVersion>
+
 
     <properties>
         <okay.common.version>${project.version}</okay.common.version>
