--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,18 @@
         <module>okay-auth</module>
         <module>okay-common</module>
         <module>okay-upms</module>
+        <module>okay-gateway</module>
     </modules>
 
     <properties>
+        <nacosGroup>schema-group</nacosGroup>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.6.3</spring-boot.version>
-        <spring-cloud.version>2021.0.1</spring-cloud.version>
-        <spring-cloud-alibaba.version>2021.0.1.0</spring-cloud-alibaba.version>
+        <spring-boot.version>2.6.11</spring-boot.version>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
         <hutool.version>5.7.22</hutool.version>
         <maven.plugins.version>2.8</maven.plugins.version>
     </properties>
@@ -94,6 +96,16 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -119,18 +131,47 @@
     </build>
 
     <profiles>
+        <!--        <profile>-->
+        <!--            <id>dev</id>-->
+        <!--            <properties>-->
+        <!--                &lt;!&ndash; 环境标识，需要与配置文件的名称相对应 &ndash;&gt;-->
+        <!--                <profiles.active>dev</profiles.active>-->
+        <!--            </properties>-->
+        <!--            <activation>-->
+        <!--                &lt;!&ndash; 默认环境 &ndash;&gt;-->
+        <!--                <activeByDefault>true</activeByDefault>-->
+        <!--            </activation>-->
+        <!--        </profile>-->
+
         <profile>
+            <!--开发环境-->
             <id>dev</id>
             <properties>
-                <!-- 环境标识，需要与配置文件的名称相对应 -->
                 <profiles.active>dev</profiles.active>
+                <nacosNamespace>07e8a85e-e8f4-4551-9fdb-d862b8a8b3f1</nacosNamespace>
             </properties>
+            <!-- 加了这个，默认选中 -->
             <activation>
-                <!-- 默认环境 -->
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
+        <profile>
+            <!--测试环境-->
+            <id>test</id>
+            <!-- 以下属性用于 bootstrap.yml 文件中 可通过 @activatedProperties@ 获取配置的变量-->
+            <properties>
+                <profiles.active>test</profiles.active>
+                <nacosNamespace>9bfa8150-21e1-4598-86d2-a733d91c33fb</nacosNamespace>
+            </properties>
+        </profile>
+        <!--生产环境-->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <profiles.active>prod</profiles.active>
+                <nacosNamespace>7a8b5651-3a25-4429-bc9f-f2eeaca7b9bb</nacosNamespace>
+            </properties>
+        </profile>
     </profiles>
-
 
 </project>
