--- a/okay-gateway/src/main/resources/application.yml
+++ b/okay-gateway/src/main/resources/application.yml
@@ -7,11 +7,14 @@ spring:
     nacos:
       discovery:
         server-addr: 123.60.165.53:8848
+        namespace: @nacosNamespace@
+        group: @nacosGroup@
       config:
-        server-addr: 123.60.165.53:8848
+        server-addr: ${spring.cloud.nacos.discovery.server-addr}
+        namespace: @nacosNamespace@
+        group: @nacosGroup@
   config:
     import:
-      - optional:nacos:nacos-config-${spring.profiles.active}.yml
       - optional:nacos:${spring.application.name}-${spring.profiles.active}.yml
 
   profiles:
