--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 
 
     <build>
-        <finalName>${project.name}</finalName>
+        <finalName>${project.artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
