--- a/okay-upms/okay-upms-biz/pom.xml
+++ b/okay-upms/okay-upms-biz/pom.xml
@@ -64,6 +64,12 @@
     <!--    </build>-->
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
