--- a/okay-common/okay-common-bom/pom.xml
+++ b/okay-common/okay-common-bom/pom.xml
@@ -13,25 +13,63 @@
 
     <properties>
         <okay.common.version>${project.version}</okay.common.version>
-        <spring-boot.version>2.6.11</spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <security.oauth.version>2.1.8.RELEASE</security.oauth.version>
-        <log4j2.version>2.17.1</log4j2.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <fastjson.version>1.2.78</fastjson.version>
+        <spring-boot.version>2.6.11</spring-boot.version>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
+        <hutool.version>5.7.22</hutool.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
+        <dynamic-ds.version>3.5.1</dynamic-ds.version>
+        <disruptor.version>3.4.4</disruptor.version>
+        <maven.plugins.version>2.8</maven.plugins.version>
+
+        <security.oauth.version>2.1.8.RELEASE</security.oauth.version>
         <fastjson.version>1.2.78</fastjson.version>
-        <springdoc.version>1.6.7</springdoc.version>
         <spring.checkstyle.plugin>0.0.29</spring.checkstyle.plugin>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号-->
     <dependencyManagement>
         <dependencies>
+            <!-- spring boot 依赖 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- spring cloud 依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- spring cloud alibaba 依赖 -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.okay4cloud</groupId>
                 <artifactId>okay-common-core</artifactId>
+                <version>${okay.common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.okay4cloud</groupId>
+                <artifactId>okay-common-mybatis</artifactId>
+                <version>${okay.common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.okay4cloud</groupId>
+                <artifactId>okay-gateway</artifactId>
                 <version>${okay.common.version}</version>
             </dependency>
             <dependency>
@@ -44,22 +82,6 @@
                 <groupId>org.springframework.security.oauth.boot</groupId>
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
                 <version>${security.oauth.version}</version>
-            </dependency>
-            <!--spring doc -->
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-webmvc-core</artifactId>
-                <version>${springdoc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-webflux-ui</artifactId>
-                <version>${springdoc.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-security</artifactId>
-                <version>${springdoc.version}</version>
             </dependency>
             <!--fastjson 版本-->
             <dependency>
@@ -89,12 +111,6 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
                 <exclusions>
-                    <!--排除tomcat依赖-->
-                    <exclusion>
-                        <artifactId>spring-boot-starter-tomcat</artifactId>
-                        <groupId>org.springframework.boot</groupId>
-                    </exclusion>
-
                     <!--排除默认日志依赖-->
                     <exclusion>
                         <groupId>org.springframework.boot</groupId>
@@ -102,11 +118,10 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- log4j2 -->
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-log4j2</artifactId>
-                <version>${spring-boot.version}</version>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptor.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
