--- a/okay-common/pom.xml
+++ b/okay-common/pom.xml
@@ -15,5 +15,6 @@
         <module>okay-common-bom</module>
         <module>okay-common-core</module>
         <module>okay-common-mybatis</module>
+        <module>okay-common-log</module>
     </modules>
 </project>
