--- a/okay-common/okay-common-log/pom.xml
+++ b/okay-common/okay-common-log/pom.xml
@@ -2,35 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>okay-upms</artifactId>
         <groupId>org.okay4cloud</groupId>
+        <artifactId>okay-common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>okay-upms-api</artifactId>
+    <artifactId>okay-common-log</artifactId>
 
     <dependencies>
-        <!--core 工具类-->
         <dependency>
             <groupId>org.okay4cloud</groupId>
             <artifactId>okay-common-core</artifactId>
         </dependency>
-        <!--feign 注解依赖-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-openfeign-core</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <!--mybatis 依赖-->
         <dependency>
             <groupId>org.okay4cloud</groupId>
-            <artifactId>okay-common-mybatis</artifactId>
+            <artifactId>okay-upms-api</artifactId>
+        </dependency>
+        <!--安全依赖获取上下文信息-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 
