--- a/okay-upms/okay-upms-biz/pom.xml
+++ b/okay-upms/okay-upms-biz/pom.xml
@@ -13,6 +13,15 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>org.okay4cloud</groupId>
+            <artifactId>okay-upms-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.okay4cloud</groupId>
+            <artifactId>okay-common-log</artifactId>
+        </dependency>
         <!--web + actuator-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -22,15 +31,33 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!--feign 依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
         <!--注册中心客户端-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
         <!--配置中心客户端-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <!--orm-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
 
 
