--- a/okay-auth/src/main/resources/application.yml
+++ b/okay-auth/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: ${NACOS_HOST:pig-register}:${NACOS_PORT:8848}
+        server-addr: ${NACOS_HOST:nacos}:${NACOS_PORT:8848}
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
   config:
