--- a/okay-gateway/src/main/resources/application.yml
+++ b/okay-gateway/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 123.60.165.53:8848
+        server-addr: ${NACOS_HOST:nacos}:${NACOS_PORT:8848}
         namespace: @nacosNamespace@
         group: @nacosGroup@
       config:
