--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <hutool.version>5.8.11</hutool.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <dynamic-ds.version>3.5.1</dynamic-ds.version>
+        <xxl-job.version>2.3.1</xxl-job.version>
         <maven.plugins.version>2.8</maven.plugins.version>
     </properties>
 
